--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Start a new To-Do list{% endblock header_text %}
+{% block header_text %}Start a new To-Do list{% endblock %}
 
-{% block form_action %}/lists/new{% endblock form_action %}
+{% block form_action %}{% url 'new_list' %}{% endblock %}
+
