--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Your To-Do list{% endblock header_text %}
+{% block header_text %}Your To-Do list{% endblock %}
 
-{% block form_action %}/lists/{{ list_.id }}/add_item{% endblock form_action %}
+{% block form_action %}{% url 'view_list' list.id %}{% endblock %}
 
 {% block table %}
     <table id="id_list_table" class="table">
-        {% for item in list_.item_set.all %}
-            <tr><td>{{ forloop.counter }}: {{ item.text }}</td> </tr>
+        {% for item in list.item_set.all %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
     </table>
-{% endblock table %}
+{% endblock %}
