Added basic jQuery functionality

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -36,6 +36,7 @@
     </div>
 
 </div>
+<script charset="utf-8" src="/static/jquery.min.js"></script>
+<script charset="utf-8" src="/static/list.js"></script>
 </body>
-
 </html>
