Added a Mozilla Persona support.

--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -38,5 +38,6 @@
 </div>
 <script charset="utf-8" src="/static/jquery.min.js"></script>
 <script charset="utf-8" src="/static/list.js"></script>
+<script charset="utf-8" src="/static/persona.js"></script>
 </body>
 </html>
