--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,3 +1,5 @@
+{% load static from staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,6 +12,16 @@
 
 <body>
 <div class="container">
+
+    <div class="navbar">
+        {% if user.email %}
+            <p>Logged in as {{ user.email }}</p>
+            <p><a id="logout" href="{% url 'accounts:logout' %}">Sign out</a></p>
+        {% else %}
+            <a href="#" id="login">Sign in</a>
+        {% endif %}
+        <p>User: {{ user }}</p>
+    </div>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
@@ -36,8 +48,50 @@
     </div>
 
 </div>
-<script charset="utf-8" src="/static/jquery.min.js"></script>
-<script charset="utf-8" src="/static/list.js"></script>
-<script charset="utf-8" src="/static/persona.js"></script>
+<script charset="utf-8" src="{% static 'jquery.min.js' %}"></script>
+<script charset="utf-8" src="{% static 'jquery-2.1.1.min.map' %}"></script>
+<script src="https://login.persona.org/include.js"></script>
+<script charset="utf-8" src="{% static 'list.js' %}"></script>
+<script charset="utf-8">
+$(document).ready(function () {
+    var loginLink = document.getElementById('login');
+
+    if (loginLink) {
+        loginLink.onclick = function () {
+            navigator.id.request();
+        };
+    }
+
+    var logoutLink = document.getElementById('logout');
+    if (logoutLink) {
+        logoutLink.onclick = function () {
+            navigator.id.logout();
+        }
+    }
+
+    var currentUser = '{{ user.email }}' || null;
+    var csrfToken = '{{ csrf_token }}';
+    console.log(currentUser);
+
+    navigator.id.watch({
+        loggedInUser: currentUser,
+        onlogin: function (assertion) {
+            $.post('{% url "accounts:login" %}', {assertion: assertion, csrfmiddlewaretoken: csrfToken})
+            .done(function () {
+                window.location.reload();
+            })
+            .fail(function () {
+              navigator.id.logout();
+            });
+        },
+        onlogout: function () {
+            $.post('{% url "accounts:logout" %}')
+            .always(function () {
+                window.location.reload();
+            });
+        }
+    });
+});
+</script>
 </body>
 </html>
