--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -1,15 +1,21 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>To-Do lists</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="/static/base.css" rel="stylesheet" media="screen">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+    <link href="{% static 'base.css' %}" rel="stylesheet" media="screen">
 </head>
 
 <body>
 <div class="container">
+    <nav class="navbar navbar-default" role="navigation">
+        <a class="navbar-brand" href="/">Superlists</a>
+        <a class="btn navbar-btn navbar-right" id="login" href="#">Sign in</a>
+    </nav>
 
     <div class="row">
         <div class="col-md-6 col-md-offset-3 jumbotron">
@@ -36,7 +42,7 @@
     </div>
 
 </div>
-<script charset="utf-8" src="/static/jquery.min.js"></script>
-<script charset="utf-8" src="/static/list.js"></script>
+<script charset="utf-8" src="{% static 'jquery.min.js' %}"></script>
+<script charset="utf-8" src="{% static 'list.js' %"></script>
 </body>
 </html>
