--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -43,6 +43,12 @@
 
 </div>
 <script charset="utf-8" src="{% static 'jquery.min.js' %}"></script>
-<script charset="utf-8" src="{% static 'list.js' %"></script>
+<script charset="utf-8" src="{% static 'list.js' %}"></script>
+<script charset="utf-8" src="{% static 'accounts.js' %}"></script>
+<script charset="utf-8">
+    $(document).ready(function () {
+        Superlists.Acccounts.initialize(navigator)
+    });
+</script>
 </body>
 </html>
