--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -14,7 +14,12 @@
 <div class="container">
     <nav class="navbar navbar-default" role="navigation">
         <a class="navbar-brand" href="/">Superlists</a>
-        <a class="btn navbar-btn navbar-right" id="login" href="#">Sign in</a>
+        {% if user.email %}
+            <a class="btn navbar-btn navbar-right" id="id_logout" href="{% url 'logout' %}">Log out</a>
+            <span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
+        {% else %}
+            <a class="btn navbar-btn navbar-right" id="id_login" href="#">Sign in</a>
+        {% endif %}
     </nav>
 
     <div class="row">
@@ -43,11 +48,19 @@
 
 </div>
 <script charset="utf-8" src="{% static 'jquery.min.js' %}"></script>
-<script charset="utf-8" src="{% static 'list.js' %}"></script>
+<script src="https://login.persona.org/include.js"></script>
 <script charset="utf-8" src="{% static 'accounts.js' %}"></script>
+<script charset="utf-8" src="{% static 'list.js' %}"></script>
 <script charset="utf-8">
+    /*global $, Superlists, navigator */
     $(document).ready(function () {
-        Superlists.Acccounts.initialize(navigator)
+        var user = "{{ user.email }}" || null;
+        var token = "{{ csrf_token }}";
+        var urls = {
+            login: "{% url 'persona_login' %}",
+            logout: "TODO"
+        };
+        Superlists.Accounts.initialize(navigator, user, token, urls);
     });
 </script>
 </body>
