--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -15,6 +15,9 @@
     <nav class="navbar navbar-default" role="navigation">
         <a class="navbar-brand" href="/">Superlists</a>
         {% if user.email %}
+            <ul class="nav navbar-nav">
+                <li><a href="{% url 'my_lists' user.email %}">My lists</a></li>
+            </ul>
             <a class="btn navbar-btn navbar-right" id="id_logout" href="{% url 'logout' %}">Log out</a>
             <span class="navbar-text navbar-right">Logged in as {{ user.email }}</span>
         {% else %}
@@ -26,15 +29,17 @@
         <div class="col-md-6 col-md-offset-3 jumbotron">
             <div class="text-center">
                 <h1>{% block header_text %}{% endblock %}</h1>
-                <form method="POST" action="{% block form_action %}{% endblock %}">
-                    {{ form.text }}
-                    {% csrf_token %}
-                    {% if form.errors %}
-                        <div class="form-group has-error">
-                            <div class="help-block">{{ form.text.errors }}</div>
-                        </div>
-                    {% endif %}
-                </form>
+                {% block listform %}
+                    <form method="POST" action="{% block form_action %}{% endblock %}">
+                        {{ form.text }}
+                        {% csrf_token %}
+                        {% if form.errors %}
+                            <div class="form-group has-error">
+                                <div class="help-block">{{ form.text.errors }}</div>
+                            </div>
+                        {% endif %}
+                    </form>
+                {% endblock listform %}
             </div>
         </div>
     </div>
@@ -42,11 +47,18 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             {% block table %}
-            {% endblock %}
+            {% endblock table %}
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            {% block extra_content %}
+            {% endblock extra_content %}
+        </div>
+    </div>
 </div>
+
 <script charset="utf-8" src="{% static 'jquery.min.js' %}"></script>
 <script src="https://login.persona.org/include.js"></script>
 <script charset="utf-8" src="{% static 'accounts.js' %}"></script>
